WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36139
[Qt] LayoutTests/http/tests/appcache/empty-manifest.html failed and skipped on Qt
https://bugs.webkit.org/show_bug.cgi?id=36139
Summary
[Qt] LayoutTests/http/tests/appcache/empty-manifest.html failed and skipped o...
Chang Shu
Reported
2010-03-15 14:21:30 PDT
The above test failed.
Attachments
fix patch
(3.54 KB, patch)
2010-03-16 17:46 PDT
,
Chang Shu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chang Shu
Comment 1
2010-03-16 17:46:27 PDT
Created
attachment 50858
[details]
fix patch
Laszlo Gombos
Comment 2
2010-03-16 19:41:14 PDT
Comment on
attachment 50858
[details]
fix patch Looks good to me, r+.
WebKit Commit Bot
Comment 3
2010-03-17 18:59:58 PDT
Comment on
attachment 50858
[details]
fix patch Clearing flags on attachment: 50858 Committed
r56140
: <
http://trac.webkit.org/changeset/56140
>
WebKit Commit Bot
Comment 4
2010-03-17 19:00:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug