2010-03-17  Chang Shu  <chang.shu@nokia.com>

Reviewed by Laszlo Gombos.

        https://bugs.webkit.org/show_bug.cgi?id=36139
        [Qt] Unskip the test that now passes.

        platform/qt/Skipped:
2010-03-17  Chang Shu  <chang.shu@nokia.com>

        Reviewed by Laszlo Gombos.

        https://bugs.webkit.org/show_bug.cgi?id=36139
        [Qt] Clean up cache while setting cache quota. This behavior matches other platforms,
        such as mac and gtk.

         * Api/qwebsettings.cpp:
        (QWebSettings::setOfflineWebApplicationCacheQuota):
2010-03-17  Chang Shu  <chang.shu@nokia.com>

        Reviewed by Laszlo Gombos.

        https://bugs.webkit.org/show_bug.cgi?id=36139
        [Qt] Clean up cache each time DumpRenderTree starts. This behavior
        matches other platforms, such as mac and gtk.

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):

Canonical link: https://commits.webkit.org/47434@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56140 268f45cc-cd09-0410-ab3c-d52691b4dbfc